--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+.header {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: rgb(226, 226, 226);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn {
+  margin-top: 20px;
+  width: 48%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+  padding-left: 25px;
+  font-size: 12px;
+  font-style: italic;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* css kartu */
+.card-wrapper {
+  width: 250px;
+  height: 200px;
+  display: flex;
+  margin-top: 40px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  flex-direction: column;
+  background-color: white;
+  box-shadow: 0px 2px 15px #383838;
+}
+.card-top {
+  width: 100%;
+  height: 8px;
+  border-radius: 10px 10px 0px 0px;
+}
+.task-holder {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
   display: flex;
   flex-direction: column;
+  position: relative;
+}
+.card-header {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.task-container {
+  height: 600px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  gap: 1em;
+  min-width: 90%;
+  flex-wrap: wrap;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 925px) {
+  .card-wrapper {
+    width: 300px;
+    height: 230px;
+    border-radius: 5px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 768px) {
+  .card-wrapper {
+    width: 400px;
+    height: 50vh;
+    border-radius: 10px;
+  }
+  .card-header {
+    height: 60px;
+    font-size: 24px;
+  }
+  p{
+    font-size: 16px;
   }
 }
